force-app/main/default/objects/LocalProduct__c/LocalProduct__c.object-meta.xml
<CustomObject>
    <label>Local Product</label>
    <nameField>
        <label>Local Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>