force-app/main/default/objects/LocalProduct__c/fields/Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>Ext_ID__c</fullName>
    <label>Ext ID</label>
    <length>225</length>
    <required>true</required>
    <type>Text</type>
</CustomField>