force-app/main/default/objects/LocalProduct__c/fields/Global_Product_UID__c.field-meta.xml
<CustomField>
    <fullName>Global_Product_UID__c</fullName>
    <label>Global Product UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>