force-app/main/default/objects/LocalProduct__c/fields/Line_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Service__c</fullName>
    <label>Line of Service</label>
    <length>225</length>
    <type>Text</type>
</CustomField>