force-app/main/default/objects/LocalProduct__c/fields/Local_Product_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Local_Product_Group_2__c</fullName>
    <label>Local Product Group 2</label>
    <length>110000</length>
    <type>LongTextArea</type>
</CustomField>