force-app/main/default/objects/LocalProduct__c/fields/Priority_Service_Global_Platform__c.field-meta.xml
<CustomField>
    <fullName>Priority_Service_Global_Platform__c</fullName>
    <label>Priority Service Global Platform</label>
    <length>225</length>
    <type>Text</type>
</CustomField>