force-app/main/default/objects/LocalProduct__c/fields/Product_Example_of_service__c.field-meta.xml
<CustomField>
    <fullName>Product_Example_of_service__c</fullName>
    <label>Product Example of service</label>
    <length>110000</length>
    <type>LongTextArea</type>
</CustomField>