force-app/main/default/objects/LocalProduct__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>ProductCode</label>
    <length>225</length>
    <type>Text</type>
</CustomField>