force-app/main/default/objects/LocalProduct__c/fields/SF_Owner__c.field-meta.xml
<CustomField>
    <fullName>SF_Owner__c</fullName>
    <label>SF Owner</label>
    <length>225</length>
    <type>Text</type>
</CustomField>