force-app/main/default/objects/LocalProduct__c/fields/SF_RecordType__c.field-meta.xml
<CustomField>
    <fullName>SF_RecordType__c</fullName>
    <label>SF RecordType</label>
    <length>225</length>
    <type>Text</type>
</CustomField>